k8s/gbdt-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose -f ../docker-compose.yml convert
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: gbdt
  name: gbdt
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: gbdt
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose -f ../docker-compose.yml convert
        kompose.version: 1.26.1 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/model-tier: "true"
        io.kompose.service: gbdt
    spec:
      containers:
        - env:
            - name: DISABLE_NGINX
              value: "yes"
            - name: GUNICORN_CMD_ARGS
              value: --bind=0.0.0.0:5003 --timeout 60 -k gevent --statsd-host=promstats:9125 --statsd-prefix=gbdt
          image: gbdt
          name: gbdt
          ports:
            - containerPort: 5003
          resources: {}
      restartPolicy: Always
status: {}
