k8s/ridgelog-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose -f ../docker-compose.yml convert
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: ridgelog
  name: ridgelog
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: ridgelog
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose -f ../docker-compose.yml convert
        kompose.version: 1.26.1 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/model-tier: "true"
        io.kompose.service: ridgelog
    spec:
      containers:
        - env:
            - name: DISABLE_NGINX
              value: "yes"
            - name: GUNICORN_CMD_ARGS
              value: --bind=0.0.0.0:5001 --timeout 60 -k gevent --statsd-host=promstats:9125 --statsd-prefix=ridgelog
          image: ridge-log
          name: ridgelog
          ports:
            - containerPort: 5001
          resources: {}
      restartPolicy: Always
status: {}
