k8s/GBDT-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose -f ../docker-compose.yml convert
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: gbdt
  name: gbdt
spec:
  ports:
    - name: "5003"
      port: 5003
      targetPort: 5003
  selector:
    io.kompose.service: gbdt
status:
  loadBalancer: {}
