k8s/promstats-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose --file ../docker-compose.yml convert
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: promstats
  name: promstats
spec:
  ports:
    - name: "9125"
      port: 9125
      targetPort: 9125
    - name: "9102"
      port: 9102
      targetPort: 9102
  selector:
    io.kompose.service: promstats
status:
  loadBalancer: {}
