k8s/model-tier-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: model-tier
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/model-tier: "true"
  podSelector:
    matchLabels:
      io.kompose.network/model-tier: "true"
